@@ -1,9 +1,12 @@
 package ft.framework.orm.dialect;
 
-import java.sql.SQLIntegrityConstraintViolationException;
+import java.sql.SQLException;
 import java.sql.SQLType;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
+import java.time.LocalTime;
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collection;
 import java.util.EnumMap;
 import java.util.HashMap;
@@ -15,6 +18,9 @@ import java.util.stream.Collectors;
 import com.mysql.cj.MysqlType;
 
 import ft.framework.mvc.domain.Pageable;
+import ft.framework.mvc.domain.Sort;
+import ft.framework.orm.annotation.OnDelete;
+import ft.framework.orm.error.DuplicateRelationshipException;
 import ft.framework.orm.error.DuplicateValueException;
 import ft.framework.orm.mapping.Column;
 import ft.framework.orm.mapping.DataType;
@@ -23,6 +29,7 @@ import ft.framework.orm.mapping.contraint.Constraint;
 import ft.framework.orm.mapping.contraint.Index;
 import ft.framework.orm.mapping.contraint.Unique;
 import ft.framework.orm.mapping.naming.Named;
+import ft.framework.orm.mapping.relationship.ManyToOne;
 import ft.framework.orm.mapping.relationship.Relationship;
 import ft.framework.orm.predicate.Branch;
 import ft.framework.orm.predicate.Comparison;
@@ -31,10 +38,13 @@ import ft.framework.orm.predicate.Predicate;
 public class MySQLDialect implements Dialect {
 	
 	public static final Pattern DUPLICATE_VALUE_PATTERN = Pattern.compile("^Duplicate entry '(.*?)' for key '(.*?)'$");
+	public static final Pattern DUPLICATE_FOREIGN_KEY_PATTERN = Pattern.compile("^Duplicate foreign key constraint name '(.*?)'$");
 	
 	private static final Map<Class<?>, SQLType> simpleTypes = new HashMap<>();
 	private static final Map<Branch.Type, String> branchToCode = new EnumMap<>(Branch.Type.class);
 	private static final Map<Comparison.Type, String> comparisonToCode = new EnumMap<>(Comparison.Type.class);
+	private static final Map<Sort.Direction, String> sortDirectionToCode = new EnumMap<>(Sort.Direction.class);
+	private static final Map<OnDelete.Action, String> onDeleteActionToCode = new EnumMap<>(OnDelete.Action.class);
 	
 	static {
 		simpleTypes.put(long.class, MysqlType.BIGINT);
@@ -52,12 +62,10 @@ public class MySQLDialect implements Dialect {
 		simpleTypes.put(Double.class, MysqlType.DOUBLE);
 		simpleTypes.put(float.class, MysqlType.DOUBLE);
 		simpleTypes.put(Float.class, MysqlType.FLOAT);
-		
 		simpleTypes.put(LocalDate.class, MysqlType.DATE);
 		simpleTypes.put(LocalDateTime.class, MysqlType.DATETIME);
-	}
-	
-	static {
+		simpleTypes.put(LocalTime.class, MysqlType.TIME);
+		
 		branchToCode.put(Branch.Type.AND, "AND");
 		branchToCode.put(Branch.Type.OR, "OR");
 		
@@ -69,21 +77,55 @@ public class MySQLDialect implements Dialect {
 		comparisonToCode.put(Comparison.Type.LESS_THAN_EQUALS, "<=");
 		comparisonToCode.put(Comparison.Type.GREATER_THAN, ">");
 		comparisonToCode.put(Comparison.Type.GREATER_THAN_EQUALS, ">=");
+		comparisonToCode.put(Comparison.Type.LIKE, "LIKE");
+		
+		sortDirectionToCode.put(Sort.Direction.ASCENDING, "ASC");
+		sortDirectionToCode.put(Sort.Direction.DESCENDING, "DESC");
+		
+		onDeleteActionToCode.put(OnDelete.Action.RESTRICT, "RESTRICT");
+		onDeleteActionToCode.put(OnDelete.Action.SET_NULL, "SET_NULL");
+		onDeleteActionToCode.put(OnDelete.Action.NO_ACTION, "NO_ACTION");
+		onDeleteActionToCode.put(OnDelete.Action.CASCADE, "CASCADE");
 	}
 	
 	@Override
-	public Exception translate(Table table, SQLIntegrityConstraintViolationException exception) {
+	public Exception translate(Table table, SQLException exception) {
 		final var message = exception.getMessage();
 		
 		var matcher = DUPLICATE_VALUE_PATTERN.matcher(message);
 		if (matcher.find()) {
 			final var value = matcher.group(1);
-			final var constraint = findConstraintByName(table, matcher.group(2));
+			
+			var constraintName = matcher.group(2);
+			final var lastDotIndex = constraintName.lastIndexOf('.');
+			if (lastDotIndex != -1) {
+				constraintName = constraintName.substring(lastDotIndex + 1);
+			}
+			
+			System.out.println(constraintName);
+			final var constraint = findConstraintByName(table, constraintName);
 			
 			return new DuplicateValueException(value, constraint, exception);
 		}
 		
+		matcher = DUPLICATE_FOREIGN_KEY_PATTERN.matcher(message);
+		if (matcher.find()) {
+			final var relationship = findRelationByName(table, matcher.group(1));
+			
+			return new DuplicateRelationshipException(relationship, exception);
+		}
+		
 		return exception;
+	}
+	
+	private Relationship findRelationByName(Table table, String name) {
+		for (final var manyToOne : table.getManyToOnes()) {
+			if (manyToOne.getForeignKeyName().equalsIgnoreCase(name)) {
+				return manyToOne;
+			}
+		}
+		
+		return null;
 	}
 	
 	private Constraint findConstraintByName(Table table, String name) {
@@ -134,10 +176,20 @@ public class MySQLDialect implements Dialect {
 			}
 			
 			if (MysqlType.VARCHAR.equals(sqlType)) {
-				return String.format("%s(%s)", sqlType.getName(), length);
+				return "%s(%s)".formatted(sqlType.getName(), length);
 			} else {
 				return sqlType.getName();
 			}
+		}
+		
+		if (type.isEnum()) {
+			final var constants = Arrays.stream(type.getEnumConstants())
+				.map(Enum.class::cast)
+				.map(Enum::name)
+				.map((name) -> "'%s'".formatted(name))
+				.collect(Collectors.joining(", "));
+			
+			return "%s(%s)".formatted(MysqlType.ENUM.getName(), constants);
 		}
 		
 		// TODO Decimal
@@ -147,45 +199,79 @@ public class MySQLDialect implements Dialect {
 	
 	@Override
 	public String buildCreateTableStatement(Table table) {
-		final var sql = new StringBuilder();
+		final var sql = new StringBuilder()
+			.append("CREATE TABLE ")
+			.append(quote(table)).append("(\n");
 		
-		sql.append("CREATE TABLE `").append(table.getName()).append("`(\n");
-		
-		for (final var column : table.getAllColumns()) {
-			sql.append("\t`").append(column.getName()).append("` ").append(translate(column.getDataType()));
+		for (final var column : table.getColumns()) {
+			boolean isId = table.getIdColumn().equals(column);
 			
-			if (!column.isNullable()) {
-				sql.append(" NOT NULL");
-			}
-			
-			if (table.getIdColumn().equals(column)) {
-				sql.append(" AUTO_INCREMENT");
-			}
-			
-			sql.append(",\n");
+			sql.append("\t")
+				.append(buildColumn(column, isId))
+				.append(",\n");
 		}
 		
-		sql.append("\tPRIMARY KEY(`" + table.getIdColumn().getName() + "`)\n");
-		sql.append(");");
+		return sql
+			.append("\tPRIMARY KEY(").append(quote(table.getIdColumn())).append(")\n")
+			.append(");")
+			.toString();
+	}
+	
+	public String buildColumn(Column column, boolean isId) {
+		final var sql = new StringBuilder()
+			.append(quote(column))
+			.append(' ')
+			.append(translate(column.getDataType()));
+		
+		if (!column.isNullable()) {
+			sql.append(" NOT NULL");
+		}
+		
+		if (isId) {
+			sql.append(" AUTO_INCREMENT");
+		}
 		
 		return sql.toString();
 	}
 	
 	@Override
-	public String buildAlterTableAddForeignKeyStatement(Table table, Relationship relationship) {
-		final var sql = new StringBuilder();
-		
+	public String buildAlterTableAddColumnStatement(Table table, Column column) {
+		return new StringBuilder()
+			.append("ALTER TABLE ")
+			.append(quote(table))
+			.append(" ADD ")
+			.append(buildColumn(column, false))
+			.toString();
+	}
+	
+	@Override
+	public String buildAlterTableAddForeignKeyStatement(Table table, ManyToOne relationship) {
 		final var targetTable = relationship.getTarget().getTable();
 		final var idColumn = table.getIdColumn();
 		
-		sql.append("ALTER TABLE `").append(table.getName()).append("` ");
-		
 		final var keyName = "fk-%s-%s".formatted(table.getName(), relationship.getName());
 		
-		sql.append("ADD CONSTRAINT `").append(keyName).append("` FOREIGN KEY (`").append(relationship.getName()).append("`)")
-			.append(" REFERENCES `").append(targetTable.getName()).append("`(`").append(idColumn.getName()).append("`);");
+		final var sql = new StringBuilder()
+			.append("ALTER TABLE ")
+			.append(quote(table))
+			.append(" ADD CONSTRAINT ")
+			.append(quote(keyName))
+			.append(" FOREIGN KEY ")
+			.append(paranthesis(quote(relationship)))
+			.append(" REFERENCES ")
+			.append(quote(targetTable))
+			.append(paranthesis(quote(idColumn)));
 		
-		return sql.toString();
+		final var onDeleteAction = relationship.getOnDeleteAction();
+		if (onDeleteAction != null) {
+			sql
+				.append(" ON DELETE ")
+				.append(onDeleteActionToCode.get(onDeleteAction));
+		}
+		
+		return sql
+			.append(";")
+			.toString();
 	}
 	
 	@Override
@@ -302,6 +388,21 @@ public class MySQLDialect implements Dialect {
 	}
 	
 	@Override
+	public String buildSelectByIdStatement(Table table, Collection<Column> columns) {
+		return buildSelectFrom(table, columns)
+			.append(buildWhereId(table))
+			.toString();
+	}
+	
+	private String buildWhereId(Table table) {
+		return new StringBuilder()
+			.append(" WHERE ")
+			.append(quote(table.getIdColumn()))
+			.append(" = ?;")
+			.toString();
+	}
+	
+	@Override
 	public String buildSelectStatement(Table table, Collection<Column> columns) {
 		return buildSelectStatement(table, columns, null, null);
 	}
@@ -313,34 +414,11 @@ public class MySQLDialect implements Dialect {
 	
 	@Override
 	public String buildSelectStatement(Table table, Collection<Column> columns, Predicate<?> predicate, Pageable pageable) {
-		final var sql = new StringBuilder();
-		
-		sql.append("SELECT ");
-		
-		final var iterator = columns.iterator();
-		while (iterator.hasNext()) {
-			final var column = iterator.next();
-			
-			sql.append("`").append(column.getName()).append("`");
-			
-			if (iterator.hasNext()) {
-				sql.append(", ");
-			}
-		}
-		
-		sql.append(" FROM `").append(table.getName()).append("`");
-		
-		if (predicate != null) {
-			sql.append(buildWhere(predicate));
-		}
-		
-		if (pageable != null) {
-			sql.append(buildLimitAndOffset(pageable));
-		}
-		
-		sql.append(";");
-		
-		return sql.toString();
+		return buildSelectFrom(table, columns)
+			.append(buildWhere(predicate))
+			.append(buildPageable(table, pageable))
+			.append(";")
+			.toString();
 	}
 	
 	@Override
@@ -350,20 +428,115 @@ public class MySQLDialect implements Dialect {
 	
 	@Override
 	public String buildCountStatement(Table table, Predicate<?> predicate) {
-		final var sql = new StringBuilder();
-		
-		sql.append("SELECT ").append("COUNT(*)").append(" FROM `").append(table.getName()).append("`");
-		
-		if (predicate != null) {
-			sql.append(buildWhere(predicate));
-		}
-		
-		sql.append(";");
-		
-		return sql.toString();
+		return new StringBuilder()
+			.append("SELECT COUNT(*) FROM ")
+			.append(quote(table))
+			.append(buildWhere(predicate))
+			.append(";")
+			.toString();
 	}
 	
-	private Object buildLimitAndOffset(Pageable pageable) {
+	@Override
+	public Object buildExistsStatement(Table table, Predicate<?> predicate) {
+		return new StringBuilder()
+			.append("SELECT 1 FROM ")
+			.append(quote(table))
+			.append(buildWhere(predicate))
+			.append(";")
+			.toString();
+	}
+	
+	@Override
+	public String buildShowTableStatement() {
+		return "SHOW TABLES;";
+	}
+	
+	@Override
+	public String buildShowColumnStatement(Table table) {
+		return new StringBuilder()
+			.append("SHOW COLUMNS FROM ")
+			.append(quote(table))
+			.append(';')
+			.toString();
+	}
+	
+	@Override
+	public String buildShowConstraintStatement(Table table) {
+		return new StringBuilder()
+			.append("SHOW KEYS FROM ")
+			.append(quote(table))
+			.append(';')
+			.toString();
+	}
+	
+	@Override
+	public int getConstraintNameColumnIndex() {
+		return 3;
+	}
+	
+	public StringBuilder buildSelectFrom(Table table, Collection<Column> columns) {
+		return new StringBuilder()
+			.append("SELECT ")
+			.append(quote(columns, false))
+			.append(" FROM ")
+			.append(quote(table));
+	}
+	
+	public String buildPageable(Table table, Pageable pageable) {
+		return new StringBuilder()
+			.append(buildOrderBy(table, pageable != null ? pageable.getSort() : null))
+			.append(buildLimitAndOffset(pageable))
+			.toString();
+	}
+	
+	public String buildOrderBy(Table table, Sort sort) {
+		if (sort == null) {
+			return "";
+		}
+		
+		final var orders = sort.getOrders();
+		if (orders.isEmpty()) {
+			return "";
+		}
+		
+		final var pairs = new ArrayList<Map.Entry<Column, Sort.Direction>>(orders.size());
+		
+		for (final var order : orders) {
+			final var column = table.findColumnByFieldName(order.getProperty());
+			
+			if (column == null) {
+				continue;
+			}
+			
+			pairs.add(Map.entry(column, order.getDirection()));
+		}
+		
+		if (pairs.isEmpty()) {
+			return "";
+		}
+		
+		return new StringBuilder()
+			.append(" ORDER BY ")
+			.append(pairs.stream().map(this::buildSort).collect(Collectors.joining(", ")))
+			.toString();
+	}
+	
+	public String buildSort(Map.Entry<Column, Sort.Direction> entry) {
+		final var column = entry.getKey();
+		final var direction = entry.getValue();
+		
+		return new StringBuilder()
+			.append(quote(column))
+			.append(" ")
+			.append(sortDirectionToCode.get(direction))
+			.toString();
+	}
+	
+	public Object buildLimitAndOffset(Pageable pageable) {
+		if (pageable == null) {
+			return "";
+		}
+		
 		final var limit = pageable.getSize();
 		final var offset = pageable.getPage() * limit;
 		
@@ -371,6 +544,10 @@ public class MySQLDialect implements Dialect {
 	}
 	
 	public String buildWhere(Predicate<?> predicate) {
+		if (predicate == null) {
+			return "";
+		}
+		
 		return " WHERE %s".formatted(buildPredicate(predicate));
 	}
 	
@@ -402,13 +579,13 @@ public class MySQLDialect implements Dialect {
 		return "`%s` %s ?".formatted(comparison.getColumn().getName(), code);
 	}
 	
-	public String quote(List<? extends Named> nameds, boolean addParentheses) {
+	public String quote(Collection<? extends Named> nameds, boolean addParentheses) {
 		final var quoted = nameds.stream()
 			.map(this::quote)
 			.collect(Collectors.joining(", "));
 		
 		if (addParentheses) {
-			return "(%s)".formatted(quoted);
+			return paranthesis(quoted);
 		}
 		
 		return quoted;
@@ -419,7 +596,11 @@ public class MySQLDialect implements Dialect {
 	}
 	
 	public String quote(String name) {
-		return String.format("`%s`", name);
+		return "`%s`".formatted(name);
+	}
+	
+	public String paranthesis(String code) {
+		return "(%s)".formatted(code);
 	}
 	
 }
